fixtures/frontend/milestone-2/valid/workspace-domain-literal-imports/shared/timing.aivi
domain Duration over Int = {
    literal ms : Int -> Duration
    literal sec : Int -> Duration
    type Duration -> Duration -> Duration
    (+)
    type Duration -> Int
    unwrap
}

export Duration
