fixtures/frontend/milestone-2/invalid/ambiguous-domain-member/main.aivi
domain Duration over Int = {
    type Int -> Duration
    make
}

domain Count over Int = {
    type Int -> Count
    make
}

value bad = make 1
